--- a/EMS/src/app/home/home.component.html
+++ b/EMS/src/app/home/home.component.html
@@ -3,6 +3,20 @@
     <h1>Welcome to Employee Management System</h1>
     <h3>Introducing the Next-Generation Employee Management System!</h3><br>
     <a routerLink="/login" class="btn">Get Started</a>
+    <!-- <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-4972548751802835">
+    </amp-auto-ads>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4972548751802835"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-7u+du+2r-t-3k"
+     data-ad-client="ca-pub-4972548751802835"
+     data-ad-slot="9623450716"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script> -->
   </div>
 </section>
 
