--- a/EMS/src/app/Popup/update-detail/update-detail.component.html
+++ b/EMS/src/app/Popup/update-detail/update-detail.component.html
@@ -26,7 +26,7 @@
         </mat-form-field><br>
         <div mat-dialog-actions id="btn">
           <button mat-button id="nothanks" (click)="onNoClick()">Reset</button>
-          <button mat-button [disabled]="updateForm.valid" (click)="onDelete()">UPDATE</button>
+          <button mat-button (click)="onDelete()">UPDATE</button>
         </div>
       </form>
     </div>
