--- a/EMS/src/app/Popup/update-detail/update-detail.component.html
+++ b/EMS/src/app/Popup/update-detail/update-detail.component.html
@@ -6,7 +6,7 @@
       <form [formGroup]="updateForm">
         <mat-form-field class="example-full-width">
           <!-- <mat-label>ID</mat-label> -->
-          <input matInput formControlName="id" placeholder="ID" value="Id">
+          <input matInput formControlName="" placeholder="ID" value="">
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
