--- a/EMS/src/app/Pages/forget-password/forget-password.component.html
+++ b/EMS/src/app/Pages/forget-password/forget-password.component.html
@@ -1,12 +1,21 @@
+<div class="terms-container">
+  <h2 class="terms-heading"> Set New Password </h2>
+  <div class="terms-content">
 <form [formGroup]="passwordForm" (ngSubmit)="onSubmit()">
-  <label>Password:</label>
+  <label>Email: </label>
+  <input type="email" formControlName="email">
+  <div style="color:red" *ngIf="passwordForm.get('email')?.hasError('required')">Email is required</div><br>
+
+  <label>Password: </label>
   <input type="password" formControlName="password">
-  <div *ngIf="passwordForm.get('password')?.hasError('required')">Password is required</div>
+  <div style="color:red" *ngIf="passwordForm.get('password')?.hasError('required')">Password is required</div><br>
 
 
-  <label>Confirm Password:</label>
+  <label>Confirm Password: </label>
   <input type="password" formControlName="confirmPassword">
   <div style="color:red" *ngIf="passwordForm?.hasError('passwordMismatch')">Passwords do not match</div>
-
+  <br><br>
   <button type="submit" [disabled]="!passwordForm.valid">Submit</button>
 </form>
+  </div>
+</div>
