--- a/EMS/src/app/Extra/terms-condition/terms-condition.component.css
+++ b/EMS/src/app/Extra/terms-condition/terms-condition.component.css
@@ -89,3 +89,23 @@
 #header .cart-text p {
   font-size: 14px;
   padding: 0; }
+
+  .terms-container {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  
+  .terms-heading {
+    font-size: 24px;
+    color: #333;
+    text-align: center;
+  }
+  
+  .terms-content {
+    width: 100%;
+    height: auto;
+    margin-top: 20px;
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  
