--- a/EMS/src/app/Extra/terms-condition/terms-condition.component.html
+++ b/EMS/src/app/Extra/terms-condition/terms-condition.component.html
@@ -15,7 +15,7 @@
             <a class="nav-link" href="file:///C:/Users/RISHI/OneDrive%20-%20softnoida/Documents/HairProduct/GK-hair-new/product-detail.html">Tutorials</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="file:///C:/Users/RISHI/OneDrive%20-%20softnoida/Documents/HairProduct/GK-hair-new/product-list.html">The Shop</a>
+            <a class="nav-link" href="file:///C:/Users/RISHI/OneDrive%20-%20softnoida/Documents/HairProduct/GK-hair-new/product-list.html">The Price</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"></a>
@@ -25,7 +25,7 @@
         <a class="navbar-brand ds-none d-lg-block logohomecolor" href="file:///C:/Users/RISHI/OneDrive%20-%20softnoida/Documents/HairProduct/GK-hair-new/index.html"><img src="image/logo.png" alt=""></a>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="file:///C:/Users/RISHI/OneDrive%20-%20softnoida/Documents/HairProduct/GK-hair-new/check-out.html">Find A Salon</a>
+            <a class="nav-link" href="file:///C:/Users/RISHI/OneDrive%20-%20softnoida/Documents/HairProduct/GK-hair-new/check-out.html">Find A solution</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Media</a>
@@ -33,55 +33,30 @@
           <li class="nav-item">
             <a class="nav-link" href="file:///C:/Users/RISHI/OneDrive%20-%20softnoida/Documents/HairProduct/GK-hair-new/contact-us.html">Contact us</a>
           </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="javascript:void()"  id="navbarSideButton">
-              <img src="image/add.png" alt="">
-            </a>
-            <div class="navbar-side" id="navbarSide">
-              <div class="cart-box text-center">
-                <div class="row pb-5">
-                  <div class="col-sm-4">
-                    <div class="img-box">
-                      <img src="image/product-new5.png" alt="cart">
-                    </div>
-                  </div>
-                  <div class="col-sm-8 my-auto">
-                    <div class="close"><i class="fa fa-times"></i></div>
-                    <div class="cart-text text-left my-auto">
-                      <h4>Cashmere</h4>
-                      <div class="d-flex justify-content-between">
-                        <p>QUANTITY <span>(2)</span></p>
-                        <p>19,00.00</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="col-sm-4">
-                    <div class="img-box">
-                      <img src="image/product-new1.png" alt="cart">
-                    </div>
-                  </div>
-                  <div class="col-sm-8 my-auto">
-                    <div class="close"><i class="fa fa-times"></i></div>
-                    <div class="cart-text text-left my-auto">
-                      <h4>BALANCING SHAMPOO & CONDITIONER</h4>
-                      <div class="d-flex justify-content-between">
-                        <p>QUANTITY <span>(2)</span></p>
-                        <p>19,00.00</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-            <div class="overlay"></div>
-          </li>
         </ul>
       </div>
     </nav>
   </div>
 </header><!-- /header -->
+
+<div class="terms-container">
+  <h2 class="terms-heading">Terms and Conditions</h2>
+  <div class="terms-content">
+    <h4>1. Agreement to Terms: </h4>
+    <p>By using our Services, you agree to be bound by these Terms. If you don’t agree to be bound by these Terms, do not use the Services. If you are accessing and using the Services on behalf of a company (such as your employer) or other legal entity, you represent and warrant that you have the authority to bind that entity to these Terms. In that case, “you” and “your” will refer to that entity.</p><br>
+    <h4>2. Privacy Policy</h4>
+    <p>Please review our Privacy Policy, which also governs your use of the Services, for information on how we collect, use and share your information.</p><br>
+
+    <h4>3. Changes To These Terms or the Services</h4>
+    <p>We may update the Terms from time to time in our sole discretion. If we do, we’ll let you know by posting the updated Terms on the Site and/or may also send other communications. It’s important that you review the Terms whenever we update them or you use the Services. If you continue to use the Services after we have posted updated Terms it means that you accept and agree to the changes. If you don’t agree to be bound by the changes, you may not use the Services anymore. Because our Services are evolving over time, we may change or discontinue all or any part of the Services, at any time and without notice, at our sole discretion. </p><br>
+
+    <h4>4. Accuracy of Information</h4>
+    <p>Occasionally, there may be information on the Site that contains typographical errors, inaccuracies or omissions that may relate to promotions and offers. We reserve the right to correct any errors, inaccuracies or omissions, and to change or update information or cancel orders if any information on the Site or on any related Service is inaccurate at any time without prior notice.</p><br>
+
+    <h4>5. Feedback </h4>
+    <p>We appreciate feedback, comments, ideas, proposals and suggestions for improvements to the Services (“Feedback”). If you choose to submit Feedback, you agree that we are free to use it without any restriction or compensation to you.</p><br>
+   
+    <p>By using this website, you agree to the terms and conditions stated above.</p>
+    <p>If any thing releted to this website you can Ask in chat section or <a href="/contactus">Contact - Us</a>.</p>
+  </div>
+</div>
