--- a/EMS/src/app/Extra/terms-condition/terms-condition.component.html
+++ b/EMS/src/app/Extra/terms-condition/terms-condition.component.html
@@ -42,19 +42,20 @@
 <div class="terms-container">
   <h2 class="terms-heading">Terms and Conditions</h2>
   <div class="terms-content">
-    <h4>1. Agreement to Terms: </h4>
-    <p>By using our Services, you agree to be bound by these Terms. If you don’t agree to be bound by these Terms, do not use the Services. If you are accessing and using the Services on behalf of a company (such as your employer) or other legal entity, you represent and warrant that you have the authority to bind that entity to these Terms. In that case, “you” and “your” will refer to that entity.</p><br>
+    <h4>1. Agree to Terms: </h4>
+    <p>By using our service, you agree to these terms. If you do not agree to these Terms, you may not use the Service. If you are accessing and using the Service on behalf of a company (such as an employer) or other entity, you represent and warrant that you have the authority to bind that entity to these Terms. increase. In this case, "you" and "your" refer to that entity.</p><br>
+
     <h4>2. Privacy Policy</h4>
-    <p>Please review our Privacy Policy, which also governs your use of the Services, for information on how we collect, use and share your information.</p><br>
+    <p>For information on how we collect, use and share your information, please read our Privacy Policy, which also applies to your use of the Service.</p><br>
 
-    <h4>3. Changes To These Terms or the Services</h4>
-    <p>We may update the Terms from time to time in our sole discretion. If we do, we’ll let you know by posting the updated Terms on the Site and/or may also send other communications. It’s important that you review the Terms whenever we update them or you use the Services. If you continue to use the Services after we have posted updated Terms it means that you accept and agree to the changes. If you don’t agree to be bound by the changes, you may not use the Services anymore. Because our Services are evolving over time, we may change or discontinue all or any part of the Services, at any time and without notice, at our sole discretion. </p><br>
+    <h4>3. Changes to Terms or Services</h4>
+    <p>We may update the Terms from time to time at our sole discretion. If we do so, we may notify you by posting the updated Terms on our website or send you other notices. It is important that you read these Terms whenever we update them or when you use the Service. Your continued use of the Service after we post updated Terms means you accept and agree to the changes. If you do not agree to any changes, you may no longer use the Service. As our Service evolves over time, we may change or discontinue all or any part of the Service at any time without notice, at our sole discretion.</p> <br>
 
-    <h4>4. Accuracy of Information</h4>
-    <p>Occasionally, there may be information on the Site that contains typographical errors, inaccuracies or omissions that may relate to promotions and offers. We reserve the right to correct any errors, inaccuracies or omissions, and to change or update information or cancel orders if any information on the Site or on any related Service is inaccurate at any time without prior notice.</p><br>
+    <h4>4. Accuracy of information</h4>
+    <p>Occasionally, there may be information on the Site that contains typos, inaccuracies or omissions that may relate to promotions and offers. If any information on the Site or related services is inaccurate, we reserve the right to correct any errors, inaccuracies or omissions, change or update information or cancel orders at any time without prior notice. increase.</p><br>
 
     <h4>5. Feedback </h4>
-    <p>We appreciate feedback, comments, ideas, proposals and suggestions for improvements to the Services (“Feedback”). If you choose to submit Feedback, you agree that we are free to use it without any restriction or compensation to you.</p><br>
+    <p>We welcome feedback, comments, ideas, suggestions, and suggestions for improving our Services (“Feedback”). If you choose to submit Feedback, you agree that we may use your Feedback without restriction or compensation.</p><br>
    
     <p>By using this website, you agree to the terms and conditions stated above.</p>
     <p>If any thing releted to this website you can Ask in chat section or <a href="/contactus">Contact - Us</a>.</p>
