--- a/EMS/src/app/Employee/list-employee/list-employee.component.css
+++ b/EMS/src/app/Employee/list-employee/list-employee.component.css
@@ -61,3 +61,9 @@ td.mat-cell {
   font-size: normal;
   color:black
 }
+.undoDelete{
+  top:20%;
+  background-color: brown;
+  height: 10vh;
+  width: 50%;
+}
