--- a/EMS/src/app/Employee/list-employee/list-employee.component.html
+++ b/EMS/src/app/Employee/list-employee/list-employee.component.html
@@ -38,16 +38,21 @@
           <th mat-header-cell *matHeaderCellDef> ACTION </th>
           <td mat-cell *matCellDef="let element">
             <a class="btn btn-danger btn-md" type="button" routerLink="/emplist" 
-            (click)="onClick()">Update </a>
-            <button (click)="deleteEmployee()" class="btn btn-danger" 
+            (click)="onUpdate(element)">UPDATE</a>
+
+            <button (click)="deleteEmployee(element)" class="btn btn-danger" 
             style="margin-left: 10px;">DELETE</button>
             </td>
         </ng-container>
+        
+        <div *ngIf="isUndoVisible" class="undoDelete">
+          Employee '{{ deleteEmployee }}' deleted. <a (click)="undoDelete()">Undo</a>
+        </div>
       
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
-        <mat-paginator [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions" [showFirstLastButtons]="true" [pageSize]="pageSize" [pageIndex]="currentPage" (page)="handlePage($event)">
+        <mat-paginator [pageSizeOptions]="pageSizeOptions" [showFirstLastButtons]="true" [pageSize]="pageSize" [pageIndex]="currentPage" (page)="handlePage($event)">
         </mat-paginator>
    </div> 
   </div>
